fix: github link dark mode color, tab navigation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   *,
   *::before,
   *::after {
-    @apply transition-colors duration-300;
+    @apply transition-colors duration-300 focus:outline-none;
   }
 
   main > section:not(.bleed) {
